# OpenCodeWorker

./: .gitignore  AGENTS.md  README.md  pyproject.toml
claudedocs/: design_w2_1_event_interceptor_20260520.md  research_next_tasks_20260520.md  workflow_phase_x1_implementation_backlog.md
docker/worker/: Dockerfile  Dockerfile.arm64  Dockerfile.dev  entrypoint.sh
docs/: README.md  code-review-2026-05-14.md  usage-guide.md  worker-sdk-examples.md  worker-sdk-usage.md
docs/adr/: ADR-001-opencode-adapter-mode.md  ADR-002-container-image-baseline.md  ADR-003-credential-model.md  ADR-004-broker-boundary.md  ADR-005-implementation-language.md  ADR-006-ohmy-version-and-entry.md
docs/archive/: code-review-2026-05-14.md  w1-w2-progress-2026-05-20.md  w2-phase6-sdk-progress-2026-05-22.md
docs/design/: follow-up-recommendations.md  meta-skill-strategy-skill-author.md  strategy-artifact-and-scheduling.md  worker-client-sdk-interface-design.md
docs/roadmap/: opencode-worker.md
src/broker/: policy.py  proxy.py
src/worker/: config.py  main.py
src/worker_sdk/: __init__.py  auth.py  client.py  compat.py  errors.py  models.py  retry.py  sse.py
tests/: conftest.py
tests/e2e/: test_tianqi_e2e.py
tests/fixtures/: stub_opencode_server.py
tests/integration/: conftest.py  test_hitl_timing_e2e.py  test_terminal_e2e.py  test_w_dod_smoke.py
tests/unit/: test_artifact_gc.py  test_auto_approve.py  test_conversations_writer.py  test_db_wal.py  test_driver_agent_routing.py  test_driver_interceptor_integration.py  test_event_id_race.py  test_event_stream.py  test_worker_sdk.py  (+19 more)
(+29 files in other folders)
